--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "server= localhost; database= EmprestimoDeLivros; trusted_connection= true; trustservercertificate= true"
+  },
+
   "AllowedHosts": "*"
 }
